Cambios de datos
se agregaron imagen y modificaron los links

--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@
                                 <h4>Selected Projects</h4>
                                 <div class="project-gallery">
                                     <!-- Proyecto 1 -->
-                                    <a href="https://www.google.com/" class="project-card">
+                                    <a href="https://3impacto.eco/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/3impacto.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">3impacto</h3>
                                                 <p class="project-description">Breve descripción del proyecto</p>
@@ -191,9 +191,9 @@
                                     </a>
 
                                     <!-- Proyecto 2 -->
-                                    <a href="https://www.google.com/" class="project-card">
+                                    <a href="https://match4room.com/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/match4room.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">match4room</h3>
                                                 <p class="project-description">Breve descripción del proyecto</p>
@@ -247,9 +247,9 @@
                                 <h4>Selected Projects</h4>
                                 <div class="project-gallery">
                                     <!-- Proyecto 1 -->
-                                    <a href="https://www.google.com/" class="project-card">
+                                    <a href="https://tasktugo.aptugo.com/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/TasktugoLogin.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">Tasktugo</h3>
                                                 <p class="project-description">Breve descripción del proyecto</p>
@@ -261,7 +261,7 @@
                                     </a>
 
                                     <!-- Proyecto 2 -->
-                                    <a href="https://www.google.com/" class="project-card">
+                                    <!-- <a href="https://www.google.com/" class="project-card">
                                         <div class="project-image"
                                             style="background-image: url('/img/Image-primary.jpg');">
                                             <div class="project-content">
@@ -272,12 +272,12 @@
                                                 <iconify-icon icon="material-symbols:arrow-outward"></iconify-icon>
                                             </div>
                                         </div>
-                                    </a>
+                                    </a> -->
 
                                     <!-- Proyecto 2 -->
-                                    <a href="https://www.google.com/" class="project-card">
+                                    <a href="https://univerzip.aptugo.app/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/Univerzip.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">Univerzip</h3>
                                                 <p class="project-description">Breve descripción del proyecto</p>
@@ -336,7 +336,7 @@
                                     <!-- Proyecto 1 -->
                                     <a href="https://devcitos.aptugo.app/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/Devcitos.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">devcitos</h3>
                                                 <p class="project-description">Proyecto para pasar a desarrollador</p>
@@ -388,7 +388,7 @@
                                     <!-- Proyecto 1 -->
                                     <a href="https://portafoliomatyg.aptugo.app/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/miPrimerPort.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">Portfolio</h3>
                                                 <p class="project-description">Breve descripción del proyecto</p>
@@ -438,7 +438,7 @@
                                     <!-- Proyecto 1 -->
                                     <a href="https://cyberpunk.aptugo.app/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/proyectoCyberpunk.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">blog cyberpunk</h3>
                                                 <p class="project-description">Entrega de proyecto para graduarse en
@@ -492,7 +492,7 @@
                                 <div class="project-gallery">
                                     <a href="https://catamarket-original.netlify.app/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/catamarket.JPG');">
                                             <div class="project-content">
                                                 <h3 class="project-title">Catamarket</h3>
                                                 <p class="project-description">Proyecto interdisciplinario con enfoque
@@ -530,11 +530,11 @@
                             <div class="projects-links">
                                 <h4>Proyectos Destacados</h4>
                                 <div class="project-gallery">
-                                    <a href="#" class="project-card">
+                                    <a href="https://uncatutorias.aptugo.app/" class="project-card">
                                         <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
+                                            style="background-image: url('/img/tutoriasUNCA.JPG');">
                                             <div class="project-content">
-                                                <h3 class="project-title">Sistema de Riego Automatizado</h3>
+                                                <h3 class="project-title">Tutorias UNCA</h3>
                                                 <p class="project-description">Proyecto interdisciplinario con enfoque
                                                     en eficiencia hídrica.</p>
                                             </div>
@@ -752,7 +752,7 @@
 
             <!-- Copyright -->
             <div class="copyright fade-in">
-                <p>© 2024 <strong>Pablo Matías Ganne Moreno</strong> - Diseñado y desarrollado por mí.</p>
+                <p>© 2025 <strong>Pablo Matías Ganne Moreno</strong> - Desarrollado por mí.</p>
             </div>
         </section>
     </main>
