--- a/index.html
+++ b/index.html
@@ -20,7 +20,14 @@
     </header>
 
     <div class="button-cv">
-        <button>Download CV</button>
+        <a href="assets/CV-Ganne-Moreno-Pablo-Matias.pdf" download class="download-link">
+            <button class="animated-download">
+                <span class="icon">
+                    <iconify-icon icon="material-symbols:download-rounded"></iconify-icon>
+                </span>
+                <span class="text">Download CV</span>
+            </button>
+        </a>
     </div>
 
     <nav class="navbar">
