animación para las skills

--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
 
         <!-- SKILLS SECTION -->
         <section id="skills" class="section skills">
-            <h2>Habilidades y herramientas</h2>
+            <h2 class="fade-in">Habilidades y herramientas</h2>
             <div class="skill-tools fade-in-left">
                 <!-- Tabs -->
                 <div class="skills-tabs">
@@ -612,30 +612,30 @@
                 <!-- tabs container  -->
                 <div class="skills-tab-content active" id="skills-tab-technical">
                     <ul class="skills-list">
-                        <li>HTML5 / CSS3 / SCSS</li>
-                        <li>Responsive Design & adaptación mobile</li>
-                        <li>Maquetación precisa y fiel a diseño</li>
-                        <li>Testing manual en desktop y mobile</li>
-                        <li>Creación de componentes personalizados con Aptugo</li>
+                        <li class="fade-in-left">HTML5 / CSS3 / SCSS</li>
+                        <li class="fade-in-left">Responsive Design & adaptación mobile</li>
+                        <li class="fade-in-left">Maquetación precisa y fiel a diseño</li>
+                        <li class="fade-in-left">Testing manual en desktop y mobile</li>
+                        <li class="fade-in-left">Creación de componentes personalizados con Aptugo</li>
                     </ul>
                 </div>
 
                 <div class="skills-tab-content" id="skills-tab-tools">
                     <ul class="skills-list">
-                        <li>Aptugo</li>
-                        <li>Canva</li>
-                        <li>Trello / Jira (básico)</li>
-                        <li>Google Docs / Excel / Word</li>
+                        <li class="fade-in-left">Aptugo</li>
+                        <li class="fade-in-left">Canva</li>
+                        <li class="fade-in-left">Trello / Jira (básico)</li>
+                        <li class="fade-in-left">Google Docs / Excel / Word</li>
                     </ul>
                 </div>
 
                 <div class="skills-tab-content" id="skills-tab-soft">
                     <ul class="skills-list">
-                        <li>Organización y liderazgo de tareas</li>
-                        <li>Trabajo en equipo</li>
-                        <li>Atención al detalle</li>
-                        <li>Proactividad y resolución de problemas</li>
-                        <li>Comunicación con clientes y colegas</li>
+                        <li class="fade-in-left">Organización y liderazgo de tareas</li>
+                        <li class="fade-in-left">Trabajo en equipo</li>
+                        <li class="fade-in-left">Atención al detalle</li>
+                        <li class="fade-in-left">Proactividad y resolución de problemas</li>
+                        <li class="fade-in-left">Comunicación con clientes y colegas</li>
                     </ul>
                 </div>
 
