--- a/index.html
+++ b/index.html
@@ -712,8 +712,8 @@
                     <div class="education-item">
                         <div class="education-dot"></div>
                         <div class="education-content">
-                            <h3>Diseño UX/UI Avanzado</h3>
-                            <p class="education-meta">Coursera · 2023</p>
+                            <h3>Redacción orientada a SEO</h3>
+                            <p class="education-meta">Redactium · 04/2024 - 05/2024</p>
                         </div>
                     </div>
 
@@ -721,8 +721,71 @@
                     <div class="education-item">
                         <div class="education-dot"></div>
                         <div class="education-content">
-                            <h3>Licenciatura en Diseño Gráfico</h3>
-                            <p class="education-meta">Universidad Nacional · 2020-2024</p>
+                            <h3>Curso de CSS3</h3>
+                            <p class="education-meta">Ademass Training Development · 02/2024 - 03/2024</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 3 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>Taller de CSS3</h3>
+                            <p class="education-meta">Ademass Training Development · 02/2024 - 03/2024</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 4 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>Curso de HTML5</h3>
+                            <p class="education-meta">Ademass Training Development · 01/2024 - 02/2024</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 5 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>Desarrollador Aptugo</h3>
+                            <p class="education-meta">Aptugo · 04/2022 - 07/2022</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 6 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>Introducción a la programación con Python</h3>
+                            <p class="education-meta">INCLUIT · 04/2020 - 04/2021</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 7 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>TECNICATURA UNIVERSITARIA EN DISEÑO DE SOFTWARE</h3>
+                            <p class="education-meta">Universidad Nacional de Catamarca – UNCA · 01/2025 - PRESENTE</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 8 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>INGENIERÍA EN INFORMÁTICA (PAUSADA)</h3>
+                            <p class="education-meta">Universidad Nacional de Catamarca – UNCA · 01/2017 - 01/2022</p>
+                        </div>
+                    </div>
+
+                    <!-- Item 9 -->
+                    <div class="education-item">
+                        <div class="education-dot"></div>
+                        <div class="education-content">
+                            <h3>TÉCNICO MECÁNICO ELECTRICISTA</h3>
+                            <p class="education-meta">ENET N°1 Prof. Vicente García Aguilera · 03/2009 - 03/2016</p>
                         </div>
                     </div>
                 </div>
