--- a/index.html
+++ b/index.html
@@ -987,27 +987,38 @@
     </script>
 
     <!--modal estructura y funcion-->
-    <div class="modal-overlay" id="project-modal">
-        <div class="modal-content">
-            <button class="close-modal" onclick="closeModal()">×</button>
-            <img src="" alt="Imagen del proyecto" id="modal-image">
-            <h2 id="modal-title">Título del Proyecto</h2>
-            <p id="modal-description">Descripción del proyecto</p>
-            <a href="#" target="_blank" id="modal-link" class="modal-link-button">Ver Proyecto</a>
+    <div id="project-modal" class="project-modal" style="display: none">
+        <div class="project-modal-dialog">
+            <div class="project-modal-header">
+                <h2 class="modal-title" id="modal-title">Título del Proyecto</h2>
+                <button class="modal-close" onclick="closeModal()">×</button>
+            </div>
+
+            <div class="project-modal-content">
+                <div class="modal-image-wrapper">
+                    <img id="modal-image" src="" alt="Imagen del proyecto">
+                </div>
+                <div class="modal-description-wrapper">
+                    <p id="modal-description">Descripción del proyecto</p>
+                    <a id="modal-link" class="modal-link" href="#" target="_blank">Ir al sitio</a>
+                </div>
+            </div>
         </div>
     </div>
 
     <script>
         function openModal(title, description, imageUrl, linkUrl) {
-            document.getElementById('modal-title').innerText = title;
-            document.getElementById('modal-description').innerText = description;
+            document.getElementById('modal-title').textContent = title;
+            document.getElementById('modal-description').textContent = description;
             document.getElementById('modal-image').src = imageUrl;
             document.getElementById('modal-link').href = linkUrl;
             document.getElementById('project-modal').style.display = 'flex';
+            document.body.style.overflow = 'hidden';
         }
 
         function closeModal() {
             document.getElementById('project-modal').style.display = 'none';
+            document.body.style.overflow = '';
         }
 
         document.querySelectorAll('.project-card').forEach(card => {
