--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <div class="project-gallery">
                                     <!-- Proyecto 1 -->
                                     <div class="project-card" data-title="3impacto"
-                                        data-description="Plataforma web con enfoque de triple impacto: económico, social y ambiental."
+                                        data-description="Trabajé en el Front End de 3impacto, maquetando interfaces con HTML y CSS, dándoles estilos responsive y agregando funcionalidades con JavaScript. Me encargué de que los datos, imágenes e iconos se cargaran correctamente, optimizando el rendimiento y asegurando una buena experiencia de usuario. Participé en el desarrollo del sitio web de [Ejemplo: una tienda online], creando la interfaz desde cero con HTML, CSS y JavaScript. Implementé secciones dinámicas, como un carrusel de productos y un formulario de contacto funcional, además de optimizar imágenes y asegurar que todo cargara rápido."
                                         data-image="/img/3impacto.JPG" data-link="https://3impacto.eco/">
                                         <div class="project-image" style="background-image: url('/img/3impacto.JPG');">
                                             <div class="project-content">
@@ -997,12 +997,22 @@
             <div class="project-modal-content">
                 <div class="modal-image-wrapper">
                     <img id="modal-image" src="" alt="Imagen del proyecto">
+                    
                 </div>
                 <div class="modal-description-wrapper">
                     <p id="modal-description">Descripción del proyecto</p>
-                    <a id="modal-link" class="modal-link" href="#" target="_blank">Ir al sitio</a>
                 </div>
             </div>
+
+            <div class="container-modal-link">
+                <div class="tech-tags" id="modal-tags">
+                        <span class="tech-tag">HTML</span>
+                        <span class="tech-tag">CSS</span>
+                        <span class="tech-tag">JavaScript</span>
+                    </div>
+                <a id="modal-link" class="modal-link" href="#" target="_blank">Ir al sitio</a>
+            </div>
+
         </div>
     </div>
 
