modificación del summary
Se modifico para que sea mas orientado a perfil de desarrollador front end

--- a/index.html
+++ b/index.html
@@ -90,49 +90,33 @@
 
             <h2 class="fade-in">Summary</h2>
             <div class="experience-text fade-in">
-                <p class="exp">Soy Técnico Electromecánico, que decidió dirigir su carrera hacia otro mundo que le
-                    apasiona que es la tecnología. Comencé este camino estudiando Ingeniería en Informática, por
-                    cuestión de tiempo opté por una formación más enfocada a convertirme en un profesional del
-                    desarrollo de software. Actualmente me encuentro en formación para ser desarrollador de software,
-                    con un interés hacia el desarrollo Front-End ya que me encanta ver proyectos estético, con
-                    animaciones fluidas y mas que nada, poder ser la persona que realiza esos proyectos.
-                </p>
-                <p class="exp">En este tiempo, pude especializarme en crear interfaces fieles al diseño original de mis
-                    colegas diseñadores, realizando maquetaciones limpias, aplicando estilos adecuados y cuidando cada
-                    mínimo detalle. Me destaco por ser organizado, detallista y por cumplir con los requisitos
-                    propuestos. Además, disfruto liderar equipos, brindar ayuda a mis colegas y facilitar el trabajo en
-                    conjunto. Me considero una persona creativa, curiosa y reflexiva, cualidades que me han ayudado a
-                    alcanzar pequeños logros personales y profesionales.
-                </p>
-                <p class="exp">Tuve la oportunidad de representar a mi universidad en proyectos de innovación, con mi
-                    equipo logramos el primer lugar a nivel provincial durante cinco ocasiones. Uno de esos proyectos
-                    incluso se llevó a cabo a partir de nuestra presentación.
-                </p>
-                <p class="exp">Trabajé en una startup donde empecé como tutor y coach dando soporte técnico a los
-                    estudiantes.
-                    Con el paso del tiempo llegué a asumir un rol híbrido que combinaba soporte con desarrollo de
-                    proyectos, hasta formar parte del equipo de desarrollo Front-End de la herramienta principal. Allí
-                    pude demostrar mis capacidades técnicas, adaptabilidad y proactividad al proponer mejoras que
-                    facilitaron el trabajo del equipo.
-                </p>
-                <p class="exp">He participado en reuniones con clientes y he liderado un equipo rotativo en un proyecto
-                    interno cumpliendo el rol de Líder Ágil y Product Owner. Esta experiencia y mi formación en
-                    Introducción al Desarrollo Ágil permitieron que uniese los conocimientos del enfoque tradicional que
-                    he adquirido en Ingeniería con metodologías ágiles modernas.
-                </p>
+                <p class="exp">Soy desarrollador Front-End en formación, apasionado por crear interfaces estéticas,
+                    limpias y fieles al diseño original, cuidando cada detalle en maquetación y estilos.</p>
+                <p class="exp">Mi experiencia incluye participar en proyectos de innovación donde obtuve primeros
+                    puestos a nivel provincial, y trabajar en una startup donde comencé como tutor técnico hasta
+                    integrarme al equipo de desarrollo Front-End. Allí contribuí con propuestas de mejora, reuniones con
+                    clientes y liderazgo ágil en proyectos internos.</p>
+                <p class="exp">Me destaco por mi creatividad, atención al detalle y capacidad para colaborar en equipo.
+                    Mi objetivo es seguir creciendo como Front-End Developer y aportar a proyectos que combinen diseño y
+                    tecnología con impacto.</p>
+
             </div>
 
             <div class="main-text fade-in-left">
                 <h3>
-                    Me gusta aprender haciendo. Cuando veo algo que me resulta interesante, disfruto intentar
-                    replicarlo, ya sea una animación, un diseño, una edición, una funcionalidad. Esa curiosidad me
-                    empuja a descubrir diferentes herramientas: desde editores de video e imagen hasta plataformas que
-                    optimizan el diseño y desarrollo web; también me gusta probar diferentes IA que me voy encontrando,
-                    son nuevas oportunidades para optimizar tiempos, los resultados, e incluso complementar mis propias
-                    ideas. No estoy centrado en una única área, investigo, pruebo y a medida que hago esto, aprendo lo
-                    que sea para llegar al resultado que deseo. Y así, voy acumulando conocimientos que hacen más rica
-                    mi base técnica en HTML, CSS y otras tecnologías y que me ayudan a trabajar sobre los proyectos con
-                    una mirada más creativa.
+                    Me gusta aprender haciendo. Cuando encuentro algo que me interesa, disfruto replicarlo: una
+                    animación, un diseño, una funcionalidad. Esa curiosidad me impulsa a experimentar y a descubrir
+                    nuevas herramientas.
+                </h3>
+                <h3>
+                    Exploro desde editores de video e imagen hasta plataformas de diseño y desarrollo web, además de
+                    probar diferentes IA para optimizar tiempos y resultados. Esto me permite complementar ideas y
+                    encontrar soluciones creativas.
+                </h3>
+                <h3>
+                    No me limito a un área específica: pruebo, investigo y aprendo lo necesario para lograr lo que me
+                    propongo. Así, fortalezco mi base técnica en HTML, CSS y otras tecnologías, aplicando siempre una
+                    mirada más creativa en cada proyecto.
                 </h3>
             </div>
 
@@ -269,20 +253,6 @@
                                             </div>
                                         </div>
                                     </a>
-
-                                    <!-- Proyecto 2 -->
-                                    <!-- <a href="https://www.google.com/" class="project-card">
-                                        <div class="project-image"
-                                            style="background-image: url('/img/Image-primary.jpg');">
-                                            <div class="project-content">
-                                                <h3 class="project-title">Fenix</h3>
-                                                <p class="project-description">Breve descripción del proyecto</p>
-                                            </div>
-                                            <div class="project-link">
-                                                <iconify-icon icon="material-symbols:arrow-outward"></iconify-icon>
-                                            </div>
-                                        </div>
-                                    </a> -->
 
                                     <!-- Proyecto 2 -->
                                     <a href="https://univerzip.aptugo.app/" class="project-card">
@@ -997,7 +967,7 @@
             <div class="project-modal-content">
                 <div class="modal-image-wrapper">
                     <img id="modal-image" src="" alt="Imagen del proyecto">
-                    
+
                 </div>
                 <div class="modal-description-wrapper">
                     <p id="modal-description">Descripción del proyecto</p>
@@ -1006,10 +976,10 @@
 
             <div class="container-modal-link">
                 <div class="tech-tags" id="modal-tags">
-                        <span class="tech-tag">HTML</span>
-                        <span class="tech-tag">CSS</span>
-                        <span class="tech-tag">JavaScript</span>
-                    </div>
+                    <span class="tech-tag">HTML</span>
+                    <span class="tech-tag">CSS</span>
+                    <span class="tech-tag">JavaScript</span>
+                </div>
                 <a id="modal-link" class="modal-link" href="#" target="_blank">Ir al sitio</a>
             </div>
 
