--- a/index.html
+++ b/index.html
@@ -1042,17 +1042,25 @@
             document.body.style.overflow = '';
         }
 
-        document.querySelectorAll('.project-card').forEach(card => {
-            card.addEventListener('click', () => {
-                const title = card.getAttribute('data-title');
-                const description = card.getAttribute('data-description');
-                const image = card.getAttribute('data-image');
-                const link = card.getAttribute('data-link');
-                openModal(title, description, image, link);
-            });
+        document.addEventListener('click', function (e) {
+            const projectCard = e.target.closest('.project-card');
+            if (projectCard) {
+                const title = projectCard.getAttribute('data-title');
+                const description = projectCard.getAttribute('data-description');
+                const image = projectCard.getAttribute('data-image');
+                const link = projectCard.getAttribute('data-link');
+
+                // Solo abre modal si tiene descripción larga o está marcado con hasModal
+                if (projectCard.hasAttribute('data-description') &&
+                    projectCard.getAttribute('data-description').length > 50) {
+                    openModal(title, description, image, link);
+                }
+            }
         });
     </script>
+    <!--modal estructura y funcion FIN-->
 
+    <!--particulas de fondo-->
     <script>
         document.addEventListener('DOMContentLoaded', function () {
             const particlesContainer = document.getElementById('particles-container');
